link_libraries(${PROJECT_NAME})
if (WIN32)
    link_libraries(iphlpapi)
endif (WIN32)

add_executable(db_test
        db_test.cc
        postgresql/Users.cc
		postgresql/Wallets.cc
        postgresql/Blog.cc
		postgresql/Category.cc
        postgresql/BlogTag.cc
        postgresql/Tag.cc
        mysql/Users.cc
		mysql/Wallets.cc
        mysql/Blog.cc
		mysql/Category.cc
        mysql/BlogTag.cc
        mysql/Tag.cc
        sqlite3/Users.cc
		sqlite3/Wallets.cc
        sqlite3/Blog.cc
		sqlite3/Category.cc
        sqlite3/BlogTag.cc
        sqlite3/Tag.cc
        )

if (WIN32)
    target_compile_options(db_test PRIVATE /bigobj)
endif (WIN32)

add_executable(pipeline_test
        pipeline_test.cpp
        )

add_executable(db_listener_test
        db_listener_test.cc
        )

add_executable(conn_options_test
		conn_options_test.cc
        )

add_executable(db_api_test
		db_api_test.cc
        )

if (BUILD_ORM_REFLECTION)
    add_executable(orm_reflection_test
        orm_reflection_test.cc)
    set_target_properties(orm_reflection_test PROPERTIES
        CXX_STANDARD 26
        CXX_STANDARD_REQUIRED ON
        CXX_EXTENSIONS OFF
        CXX_SCAN_FOR_MODULES OFF)
    target_compile_options(orm_reflection_test PRIVATE -freflection)
    add_test(NAME ReflectionOrm COMMAND orm_reflection_test)

    function(add_orm_reflection_compile_fail_test test_name
             case_definition expected_diagnostic)
        string(TOLOWER "${case_definition}" target_suffix)
        string(REPLACE "drogon_reflection_fail_" "" target_suffix
            "${target_suffix}")
        set(target_name "orm_reflection_compile_fail_${target_suffix}")

        add_executable(${target_name} EXCLUDE_FROM_ALL
            orm_reflection_compile_fail.cc)
        target_link_libraries(${target_name} PRIVATE ${PROJECT_NAME})
        target_compile_definitions(${target_name} PRIVATE ${case_definition})
        target_compile_options(${target_name} PRIVATE -freflection)
        set_target_properties(${target_name} PROPERTIES
            CXX_STANDARD 26
            CXX_STANDARD_REQUIRED ON
            CXX_EXTENSIONS OFF
            CXX_SCAN_FOR_MODULES OFF)

        add_test(NAME ${test_name}
            COMMAND ${CMAKE_COMMAND}
                "-DBUILD_DIR=${CMAKE_BINARY_DIR}"
                "-DBUILD_CONFIG=$<CONFIG>"
                "-DTARGET_NAME=${target_name}"
                "-DEXPECTED_DIAGNOSTIC=${expected_diagnostic}"
                -P
                "${PROJECT_SOURCE_DIR}/cmake/tests/ExpectCompileFailure.cmake")
        set_tests_properties(${test_name} PROPERTIES
            LABELS "Reflection;CompileFail"
            RUN_SERIAL TRUE
            WILL_FAIL TRUE)
    endfunction()

    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailMissingTable
        DROGON_REFLECTION_FAIL_MISSING_TABLE
        "requires exactly one Table annotation")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailDuplicateTable
        DROGON_REFLECTION_FAIL_DUPLICATE_TABLE
        "requires exactly one Table annotation")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailMissingPrimaryKey
        DROGON_REFLECTION_FAIL_MISSING_PRIMARY_KEY
        "requires exactly one PrimaryKey member")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailDuplicatePrimaryKey
        DROGON_REFLECTION_FAIL_DUPLICATE_PRIMARY_KEY
        "requires exactly one PrimaryKey member")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailInvalidIdentifier
        DROGON_REFLECTION_FAIL_INVALID_IDENTIFIER
        "column name is not a valid SQL identifier")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailDuplicateIdentifier
        DROGON_REFLECTION_FAIL_DUPLICATE_IDENTIFIER
        "column names must be unique")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailIncompatibleIgnore
        DROGON_REFLECTION_FAIL_INCOMPATIBLE_IGNORE
        "Ignore cannot be combined with another ORM annotation")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailAutoGeneratedNonPrimaryKey
        DROGON_REFLECTION_FAIL_AUTOGENERATED_NON_PRIMARY_KEY
        "AutoGenerated requires an integral PrimaryKey member")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailAutoGeneratedNonIntegral
        DROGON_REFLECTION_FAIL_AUTOGENERATED_NON_INTEGRAL
        "AutoGenerated requires an integral PrimaryKey member")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailAutoGeneratedBool
        DROGON_REFLECTION_FAIL_AUTOGENERATED_BOOL
        "AutoGenerated does not support bool PrimaryKey members")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailConstMember
        DROGON_REFLECTION_FAIL_CONST_MEMBER
        "Mapped ORM members must be mutable value types")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailReferenceMember
        DROGON_REFLECTION_FAIL_REFERENCE_MEMBER
        "Mapped ORM members must be mutable value types")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailBitField
        DROGON_REFLECTION_FAIL_BIT_FIELD
        "Bit-fields are not supported by ReflectiveMapper")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailInheritance
        DROGON_REFLECTION_FAIL_INHERITANCE
        "models must not have base classes")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailInaccessibleMember
        DROGON_REFLECTION_FAIL_INACCESSIBLE_MEMBER
        "model members must be public")
    add_orm_reflection_compile_fail_test(
        ReflectionCompileFailUnion
        DROGON_REFLECTION_FAIL_UNION
        "model must not be a union")
endif ()

set_property(TARGET db_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET db_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET db_test PROPERTY CXX_EXTENSIONS OFF)

set_property(TARGET pipeline_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET pipeline_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET pipeline_test PROPERTY CXX_EXTENSIONS OFF)

set_property(TARGET db_listener_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET db_listener_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET db_listener_test PROPERTY CXX_EXTENSIONS OFF)

set_property(TARGET conn_options_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET conn_options_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET conn_options_test PROPERTY CXX_EXTENSIONS OFF)

set_property(TARGET db_api_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET db_api_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET db_api_test PROPERTY CXX_EXTENSIONS OFF)
