link_libraries(${PROJECT_NAME})
add_executable(duckdb_test test_main.cc)
add_executable(duckdb_specific_test duckdb_specific_test.cc)
set_property(TARGET duckdb_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET duckdb_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET duckdb_test PROPERTY CXX_EXTENSIONS OFF)
set_property(TARGET duckdb_specific_test PROPERTY CXX_STANDARD ${DROGON_CXX_STANDARD})
set_property(TARGET duckdb_specific_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET duckdb_specific_test PROPERTY CXX_EXTENSIONS OFF)
